<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginTop="20dp"
    android:background="@color/skin"
    android:padding="10dp"
    android:paddingHorizontal="15dp"
    tools:ignore="TextSizeCheck">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/name_tv"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:layout_height="wrap_content"
        android:text="@string/name_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/input_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:textColor="@color/black"
        android:text="@string/name"
        app:layout_constraintStart_toEndOf="@id/name_tv"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginTop="10dp"
        android:text="@string/surname_tv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/name_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/input_surname_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/surname"
        app:layout_constraintStart_toEndOf="@id/surname_tv"
        app:layout_constraintTop_toBottomOf="@id/input_name_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/email_tv"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/surname_tv" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/input_email_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/black"
        android:text="@string/email"
        app:layout_constraintStart_toEndOf="@id/email_tv"
        app:layout_constraintTop_toBottomOf="@id/input_surname_tv" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/update_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@color/skin"
        android:contentDescription="@string/update_user"
        android:src="@drawable/ic_update"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/delete_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="10dp"
        android:background="@color/skin"
        android:contentDescription="@string/delete_user"
        android:src="@drawable/ic_delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>