<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/input_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_skin"
    android:orientation="vertical"
    android:padding="30dp">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/name_et"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/costume_et"
        android:hint="@string/name"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="@color/light_black" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/surname_et"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/costume_et"
        android:hint="@string/surname"
        android:inputType="text"
        android:padding="15dp"
        android:textColorHint="@color/light_black" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_et"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/costume_et"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="15dp"
        android:textColorHint="@color/light_black" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_input_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/costume_btn"
        android:text="@string/add_user"
        android:visibility="gone" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/update_input_btn"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="22dp"
        android:background="@drawable/costume_btn"
        android:text="@string/update_user"
        android:visibility="gone" />
</LinearLayout>